Fix spacing between nav links and booking form items so that there is no overlap

--- a/style.css
+++ b/style.css
@@ -40,6 +40,8 @@
     list-style-type: none;
     text-decoration: none;
     padding-top: 30px;
+    font-size: 20px;
+    gap: 15px;
 }
 
 a:link {
@@ -166,6 +168,19 @@ text-align: center;
     font-size: 30px;
 }
 
+#enquiries {
+    margin-top: 8px;
+}
+
+.name {
+    margin-top: 10px;
+}
+
+.submit {
+margin-top: 10px;
+margin-left: 50px;
+}
+
 /*Menu Page*/
 
 #cafe-menu {
@@ -259,10 +274,12 @@ align-items: center;
     padding: 0;
 }
 
-.nav-bar {
+.nav-bar ul {
 font-size: 15px;
 padding-left: 5px; 
+gap: 15px;
 }
+
 
 .logo-container img {
 margin-top: 0%;
